[gd_scene load_steps=9 format=3 uid="uid://c50fcukxq5c82"]

[ext_resource type="Script" path="res://scripts/frog.gd" id="1_0nh1q"]
[ext_resource type="Texture2D" uid="uid://djxm5x2udxqwi" path="res://art/frog2.png" id="2_1ur0d"]
[ext_resource type="AudioStream" uid="uid://c5ruhl0cf1sgv" path="res://sfx/frog-qua-cry-36013.mp3" id="3_y3rdk"]
[ext_resource type="AudioStream" uid="uid://bopl5hqskupmg" path="res://sfx/Pickup_Coin.wav" id="4_x727c"]
[ext_resource type="AudioStream" uid="uid://lflhienb77e2" path="res://sfx/Powerup2.wav" id="5_7kxel"]
[ext_resource type="AudioStream" uid="uid://dqnc2iwxgw08o" path="res://sfx/Hit_Hurt8.wav" id="6_umydt"]
[ext_resource type="AudioStream" uid="uid://dtvtwe2viyuam" path="res://sfx/water-splash-80537.mp3" id="7_bglvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwdtr"]
size = Vector2(12, 11)

[node name="frog" type="CharacterBody2D"]
script = ExtResource("1_0nh1q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_1ur0d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_qwdtr")

[node name="On" type="RayCast2D" parent="CollisionShape2D"]
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="FrogSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y3rdk")
pitch_scale = 1.42

[node name="MoveSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x727c")
volume_db = -20.0
pitch_scale = 0.53

[node name="ScoredSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7kxel")
volume_db = -10.0

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_umydt")
volume_db = -5.0

[node name="PlumSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_bglvm")
